# CrewAI

CrewAI-Blogpost/: pyproject.toml
CrewAI-Blogpost/crewai_blogpost/: main.py
