[tool.poetry]
name = "crewai-blogpost"
version = "0.1.0"
description = ""
authors = ["shyampagadi <shyam.pagadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.28.2"
duckduckgo-search = "^5.2.2"
langchain-google-genai = "^1.0.1"
langchain-community = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
